Changes JSON icons to Mdi Icons
For better compatibility with data taken from strings

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
 
   http: ^1.2.2
+  material_design_icons_flutter: 7.0.7296
+
 
 
   # The following adds the Cupertino Icons font to your application.
